fix: resolve code quality inspections, deprecation warnings, and SQL security vulnerabilities